# chess-engine

./: .editorconfig  .gitignore  PATCHES.md  README.md  RELEASE_NOTES.md  pext.c  pom.xml
backups/engines/: all-engine-tournaments.ps1  fight_engines.ps1  run-deepening-negamax.cmd  run-naive-position-eval.cmd  run-random-baseline.cmd  run-simple-negamax.cmd
backups/engines/results/all_engine_tournament/20250902-000907/: bayeselo.txt
src/main/java/max/chess/: Main.java
src/main/java/max/chess/engine/book/: BookManager.java  BookPolicy.java  OpeningBook.java
src/main/java/max/chess/engine/common/: Color.java  Pext.java  PieceType.java  Position.java
src/main/java/max/chess/engine/game/: BoardState.java  Game.java  GameCache.java  GameChanges.java  PlayerState.java  RepetitionCounter.java  ZobristHashKeys.java
src/main/java/max/chess/engine/movegen/: EvasionMoveGenerator.java  Move.java  MoveGenerator.java
src/main/java/max/chess/engine/search/: DebugChecks.java  Heuristics.java  IterativeDeepening.java  KingSafety.java  LMR.java  MoveOrdering.java  NaivePositionEvaluatorSearch.java  Negamax.java  NegamaxDeepeningSearch.java  NegamaxSearch.java  PrincipalVariation.java  Quiescence.java  RandomSearch.java  RootSearch.java  SearchConfig.java  SearchConstants.java  SearchContext.java  SearchFacade.java  SearchResult.java  StaticEvalCache.java  TimeControl.java
src/main/java/max/chess/engine/tb/: EndgameTablebases.java  NoopTablebases.java  TBManager.java  (+2 more)
src/main/resources/runner/: runner_template.cmd
src/native/: CMakeLists.txt  build.ps1  syzygyjni.c
(+73 files in other folders)
